# AisIoTStore

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
app/: main.py
app/adapters/: in_memory.py
app/domain/: entities.py  exceptions.py
app/ports/: repositories.py
app/presentation/: api.py  dependencies.py  schemas.py
app/usecases/: add_to_cart.py  create_order.py  get_cart.py  get_catalog.py  get_ota.py  handle_payment.py
db/: 00_schema.sql  01_seed_data.sql  02_payment_transaction_explain.sql  03_payment_transaction_plain.sql  04_index_experiments.sql  run_all.sql
docs/: architecture.md  openapi.yaml  swagger.html
tests/: conftest.py  test_integration_api.py
