[project]
name = "ais-iot-store"
version = "1.0.0"
description = "A study project demonstrating the implementation of a clean architecture using an online store selling IoT devices as an example."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pytest>=9.0.2"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
